--- a/index.html
+++ b/index.html
@@ -2,37 +2,108 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alex Turner</title>
 
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Roboto:wght@400&display=swap" rel="stylesheet">
+
+    <style>
+        h1, h2, h3 {
+            font-family: 'Playfair Display', serif;
+            margin: 10px 0;
+        }
+
+        body {
+            font-family: 'Roboto', sans-serif;
+            background-color: #2e2e2e; 
+            color: #ffffff; 
+            margin: 0;
+            padding: 0;
+            text-align: center; 
+        }
+
+        section p {
+            font-size: 14px;
+            line-height: 1.6;
+            text-align: justify;
+            margin: 20px;
+        }
+
+        ul {
+            list-style: none;
+            padding: 0;
+            text-align: center;
+        }
+
+        li {
+            margin: 5px 0;
+        }
+
+        img {
+            width: 200px; 
+            display: block; 
+            margin: 20px auto; 
+            border-radius: 10px;
+        }
+
+        footer {
+            background-color: #1c1c1c; 
+            color: #ffffff; 
+            text-align: center; 
+            padding: 10px 0; 
+            margin-top: 20px; 
+        }
+
+        #quadrado {
+            width: 100%; 
+            height: 150px; 
+            background-color: #d3d3d3; /* Cor cinza mais claro */
+            border: 2px solid #808080; /* Borda cinza mais escura */
+            margin-top: 0; 
+            display: flex; 
+            justify-content: center; 
+            align-items: center; 
+            text-align: center; 
+            color: #2e2e2e; /* Cor do texto dentro do quadrado */
+        }
+    </style>
 </head>
-
 <body>
-    <h1>Alex Turner</h1>
+    <header>
+        <div id="quadrado">
+            <h1>Alex Turner</h1> <!-- Título dentro do quadrado -->
+        </div>
+    </header>
 
-    <p>Alexander David Turner, nascido em 5 de Janeiro de de 1986, é o fundador e atual vocalista da banda de indie rock Arctic Monkeys. Compositor e músico com uma grande inteligência(pode-se dizer até genialidade) lírica
-        A banda ganhou diversos prêmios BRIT de Melhor Grupo Britânico e Melhor Album Britânico 3x em 2007,2008 e 2014. </p>
+    <main>
+        <section>
+            <p>Alexander David Turner, nascido em 5 de janeiro de 1986, é o fundador e atual vocalista da banda de indie rock Arctic Monkeys. Compositor e músico com uma grande inteligência (pode-se dizer até genialidade) lírica. A banda ganhou diversos prêmios BRIT de Melhor Grupo Britânico e Melhor Álbum Britânico em 2007, 2008 e 2014.</p>
+        </section>
 
-    <ul>
-        <h2>Realizações</h2>
+        <section>
+            <h2>Realizações</h2>
+            <ul>
+                <li>Foram indicados ao Grammy 9 vezes</li>
+                <li>Em 2014, receberam o prêmio de Melhor Álbum Britânico do Ano durante os BRIT Awards</li>
+                <li>A trilha sonora do filme <em>Submarine</em> (2010) foi composta por Alex</li>
+            </ul>
+        </section>
 
-        <li>Foram indicados ao Grammy 9x</li>
-        <li>Em 2014, receberam o prêmio Melhor Album Britânico do Ano durante os BRIT Awards</li>
-        <li> A trilha sonora do filme Submarine(2010) foi composta por Alex</li>
-    </ul>
+        <figure>
+            <img src="/CSS---Projeto-2/img/alex.jpeg" alt="Foto de Alex Turner">
+        </figure>
 
-    <figure>
-        <img src="/PROJETO PERSONALIDADE/img/alex.jpeg" alt="">
-    </figure>
+        <nav>
+            <h3>Links Úteis</h3>
+            <ul>
+                <li><a href="https://www.instagram.com/arcticmonkeysitsmylove/">Arctic Monkeys It's My Love</a></li>
+                <li><a href="https://www.instagram.com/ghostc00kie/">Ghost Cookie</a></li>
+            </ul>
+        </nav>
+    </main>
 
-     <nav>
-        <h3>Links Úteis</h3>
-        <ul>
-            <li><a href="https://www.instagram.com/arcticmonkeysitsmylove/"> Arctic Monkeys It's My Love</a></li>
-            <li><a href="https://www.instagram.com/ghostc00kie/"> Ghost Cookie</a></li>
-        </ul>
-     </nav>
-
+    <footer>
+        <p>© 2025 - Página sobre Alex Turner. Todos os direitos reservados.</p>
+    </footer>
 </body>
-
 </html>
